@@ -1,3 +1,9 @@
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.3.0-0
+- Remove Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+- Add puppetlabs-concat 6 support
+
 * Fri Mar 22 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.2-0
 - Use simplib::host_is_me in lieu of simplib's Puppet 3 host_is_me
 
